# mycli

./: Cargo.toml  README.md
src/: main.rs  utils.rs
src/cli/: chacha.rs  http.rs  jwt.rs  mod.rs
src/process/: chacha.rs  http_serve.rs  jwt.rs  mod.rs
templates/: directory_listing.html
