[package]
name = "mycli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
enum_dispatch = "0.3.13"
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.82"
tracing-subscriber = "0.3.18"
chacha20poly1305 = "0.10.1"
sha2 = "0.10.8"
base64 = "0.22.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
jsonwebtoken = "9.3.0"
tracing = "0.1.40"
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["fs"] }
